--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/lklacar/hike#readme",
   "devDependencies": {
     "typescript": "^3.1.1"
+  },
+  "bin": {
+    "hike": "./dist/index.js"
   }
 }
