--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
   },
   "bin": {
     "hike": "./dist/index.js"
+  },
+  "dependencies": {
+    "@types/yargs": "^12.0.0",
+    "yargs": "^12.0.2"
   }
 }
