--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hike-gen",
-  "version": "1.0.1",
+  "name": "hike-cli",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
