--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "dependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/mustache": "^0.8.31",
     "@types/node": "^10.11.2",
     "@types/yargs": "^12.0.0",
     "chalk": "^2.4.1",
     "chalk-animation": "^1.6.0",
+    "mustache": "^3.0.0",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.2"
   }
