--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/yargs": "^12.0.0",
     "chalk": "^2.4.1",
     "chalk-animation": "^1.6.0",
+    "react-native": "^0.57.1",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.2"
   }
