--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chalk": "^2.4.1",
     "chalk-animation": "^1.6.0",
     "react-native": "^0.57.1",
+    "react-native-cli": "^2.0.1",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.2"
   }
