Fixed some linting errors

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": " tsc -p tsconfig.json",
-    "prepublish": "tsc -p tsconfig.json"
+    "prepublish": "tsc -p tsconfig.json",
+    "lint": "tslint ./src/*/**"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@types/decamelize": "^1.2.0",
     "@types/node": "^10.11.3",
     "@types/uppercamelcase": "^3.0.0",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.1"
   },
   "bin": {
