--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "tabWidth": 4,
   "semi": true,
   "bracketSpacing": true,
-  "printWidth": 80,
-  "singleQuote": true,
+  "printWidth": 120,
+  "singleQuote": false,
   "trailingComma": "all"
 }
