--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": " tsc -p tsconfig.json",
     "prepublish": "tsc -p tsconfig.json",
-    "lint": "tslint ./src/*/**"
+    "lint": "tslint 'src/**/*.ts?(x)'"
   },
   "repository": {
     "type": "git",
