--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   },
   "homepage": "https://hyke-generator.github.io/",
   "devDependencies": {
+    "@hyke/core": "^1.0.1",
     "@types/camelcase": "^4.1.0",
+    "@types/chalk": "^2.2.0",
     "@types/decamelize": "^1.2.0",
+    "@types/mustache": "^0.8.31",
     "@types/node": "^10.11.3",
     "@types/uppercamelcase": "^3.0.0",
-    "@types/chalk": "^2.2.0",
-    "@types/mustache": "^0.8.31",
     "@types/yargs": "^12.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.1.1"
