--- a/package.json
+++ b/package.json
@@ -44,5 +44,11 @@
     "uppercamelcase": "^3.0.0",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.2"
-  }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
+  "files": ["dist"]
 }
