--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hyke/cli",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -50,5 +50,7 @@
       "pre-commit": "npm run lint"
     }
   },
-  "files": ["dist"]
+  "files": [
+    "dist"
+  ]
 }
