--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": " tsc -p tsconfig.json",
-    "prepublish": "tsc -p tsconfig.json",
+    "prepublish": "npm run lint && npm run build",
     "lint": "tslint 'src/**/*.ts?(x)'"
   },
   "repository": {
