--- a/package.json
+++ b/package.json
@@ -1,38 +1,129 @@
 {
-  "name": "@hyke/cli",
-  "version": "1.0.27",
+  "name": "cli",
+  "version": "0.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": " tsc -p tsconfig.json",
-    "prepublish": "npm run lint && npm run build",
-    "lint": "tslint 'src/**/*.ts?(x)'"
-  },
+  "keywords": [],
+  "main": "dist/cli.umd.js",
+  "module": "dist/cli.es5.js",
+  "typings": "dist/types/cli.d.ts",
+  "files": [
+    "dist"
+  ],
+  "author": "Luka Klacar <l.klacar@vegaitsourcing.rs>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hyke-generator/cli.git"
+    "url": "https://github.com/hyke-generator/cli.git"
   },
-  "author": "Luka Klacar",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hyke-generator/cli/issues"
+  "license": "MIT",
+  "engines": {
+    "node": ">=6.0.0"
   },
-  "homepage": "https://hyke-generator.github.io/",
+  "scripts": {
+    "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "prebuild": "rimraf dist",
+    "build": "tsc --module commonjs && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "start": "rollup -c rollup.config.ts -w",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
+    "deploy-docs": "ts-node tools/gh-pages-publish",
+    "report-coverage": "cat ./coverage/lcov.info | coveralls",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release",
+    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "{src,test}/**/*.ts": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testEnvironment": "node",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 95,
+        "lines": 95,
+        "statements": 95
+      }
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/*.{js,ts}"
+    ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "devDependencies": {
+    "@commitlint/cli": "^7.1.2",
+    "@commitlint/config-conventional": "^7.1.2",
     "@hyke/core": "^1.0.7",
     "@types/camelcase": "^4.1.0",
     "@types/chalk": "^2.2.0",
     "@types/decamelize": "^1.2.0",
+    "@types/jest": "^23.3.2",
     "@types/mustache": "^0.8.31",
-    "@types/node": "^10.11.7",
+    "@types/node": "^10.11.0",
     "@types/uppercamelcase": "^3.0.0",
     "@types/yargs": "^12.0.1",
+    "colors": "^1.3.2",
+    "commitizen": "^3.0.0",
+    "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^1.0.1",
+    "jest": "^23.6.0",
+    "jest-config": "^23.6.0",
+    "lint-staged": "^7.3.0",
+    "lodash.camelcase": "^4.3.0",
+    "prettier": "^1.14.3",
+    "prompt": "^1.0.0",
+    "replace-in-file": "^3.4.2",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.66.2",
+    "rollup-plugin-commonjs": "^9.1.8",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.17.0",
+    "semantic-release": "^15.9.16",
+    "ts-jest": "^23.10.2",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-standard": "^8.0.1",
+    "typedoc": "^0.12.0",
     "typescript": "^3.1.2"
   },
   "bin": {
-    "hike": "./dist/index.js"
+    "hike": "./dist/lib/cli.js"
   },
   "dependencies": {
     "camelcase": "^5.0.0",
@@ -44,13 +135,5 @@
     "uppercamelcase": "^3.0.0",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint"
-    }
-  },
-  "files": [
-    "dist"
-  ]
+  }
 }
