--- a/package.json
+++ b/package.json
@@ -30,12 +30,11 @@
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
     "semantic-release": "semantic-release",
-    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
-    "precommit": "lint-staged"
+    "semantic-release-prepare": "ts-node tools/semantic-release-prepare"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
-      "prettier --write",
+      "prettier --write --config=.prettierrc",
       "git add"
     ]
   },
@@ -135,5 +134,10 @@
     "uppercamelcase": "^3.0.0",
     "yargonaut": "^1.1.4",
     "yargs": "^12.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
